# target-chromadb

./: README.md  meltano.yml  pyproject.toml  tox.ini
target_chroma/: sinks.py  target.py
target_chromadb/: sinks.py  target.py
tests/: __init__.py  test_core.py
